fix(components): wrong color for description when select is disabled with dark theme | bh | #1079

--- a/packages/components/src/components/form/select-wrapper/select-wrapper.scss
+++ b/packages/components/src/components/form/select-wrapper/select-wrapper.scss
@@ -10,18 +10,16 @@ $root: '.root';
 
 ::slotted(select) {
   position: static !important;
-  top: 0 !important;
-  left: 0 !important;
+  display: block !important;
   width: 100% !important;
   height: p-px-to-rem(48px) !important;
-  display: block !important;
   padding: p-px-to-rem(12px) p-px-to-rem(48px) p-px-to-rem(12px) p-px-to-rem(12px) !important;
   @-moz-document url-prefix() {
     // fix for 3px text-indention in FF
     padding-left: p-px-to-rem(8px) !important;
   }
   margin: 0 !important;
-  outline: transparent solid 1px !important;
+  outline: 1px solid transparent !important;
   outline-offset: 2px !important;
   appearance: none !important;
   box-sizing: border-box !important;
@@ -29,7 +27,7 @@ $root: '.root';
   border-radius: 0 !important; // for safari
   background: $p-color-background-default !important;
   box-shadow: inset 0 0 0 1px $p-color-neutral-contrast-medium !important;
-  opacity: 1 !important;
+  //opacity: 1 !important;
   font-family: $p-font-family !important;
   font-weight: $p-font-weight-regular !important;
   font-size: $p-font-size-small !important;
@@ -257,6 +255,10 @@ input:focus + span {
 
     &--description {
       color: $p-color-neutral-contrast-medium;
+
+      #{$root}--theme-dark & {
+        color: $p-color-theme-dark-neutral-contrast-medium;
+      }
     }
 
     + #{$bem-block}__text--description {
